# instructor_examples

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
CHANGELOG/: 0.1.0.md  0.2.1.md  0.2.2.md
docs/: index.md  installation.md  usage.md
src/instructor_examples/: __init__.py  cli.py  utils.py
tests/: test_instructor_examples.py
