[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instructor_examples"
version = "0.2.2"
description = "Copy github examples to your local environment without needing to clone the entire repository."
readme = "README.md"
authors = [
  {name = "Daniel Mouris", email = "dgmouris@gmail.com"}
]
maintainers = [
  {name = "Daniel Mouris", email = "dgmouris@gmail.com"}
]
classifiers = [
    "Typing :: Typed",
    # TODO: Add additional classifiers as needed
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "requests>=2.32.5",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/dgmouris/instructor_examples/issues"
changelog = "https://github.com/dgmouris/instructor_examples/blob/main/HISTORY.md"
documentation = "https://dgmouris.github.io/instructor_examples/"
homepage = "https://github.com/dgmouris/instructor_examples"

[project.scripts]
instructor_examples = "instructor_examples.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
package = true
default-groups = ["dev"]
